Required files for Docker image and docker-compose.

--- a/basic_deployment/strapi-k8s/.env.example
+++ b/basic_deployment/strapi-k8s/.env.example
@@ -4,3 +4,12 @@ APP_KEYS="toBeModified1,toBeModified2"
 API_TOKEN_SALT=tobemodified
 ADMIN_JWT_SECRET=tobemodified
 JWT_SECRET=tobemodified
+
+DATABASE_HOST=strapiDB
+DATABASE_PORT=3306
+
+DATABASE_USERNAME=tobemodified
+DATABASE_PASSWORD=tobemodified
+DATABASE_NAME=tobemodified
+
+NODE_ENV=production
