--- a/part2/strapi-k8s/helm/db.yaml
+++ b/part2/strapi-k8s/helm/db.yaml
@@ -1,3 +1,5 @@
+strategy: Recreate
+
 image:
   repository: mysql
   tag: 5.7
@@ -28,3 +30,15 @@ secret:
     # please never use these passwords, always use strong passwords, AND remember the section "(Parenthesis regarding the Secrets)"
     MYSQL_ROOT_PASSWORD: c3RyYXBpLXN1cGVyLXNlY3VyZS1yb290LXBhc3N3b3Jk # echo -n strapi-super-secure-root-password | base64
     MYSQL_PASSWORD: c3RyYXBpLXBhc3N3b3Jk # echo -n strapi-password | base64
+
+livenessProbe:
+  exec:
+    command: ["bash", "-c", "mysqladmin --user=$MYSQL_USER --password=$MYSQL_PASSWORD ping"]
+  initialDelaySeconds: 30
+  timeoutSeconds: 5
+
+readinessProbe:
+  exec:
+    command: ["bash", "-c", "mysql --host=127.0.0.1 --user=$MYSQL_USER --password=$MYSQL_PASSWORD -e 'SELECT 1'"]
+  initialDelaySeconds: 5
+  periodSeconds: 2
