--- a/part2/strapi-k8s/helm/strapi-chart/templates/deployment.yaml
+++ b/part2/strapi-k8s/helm/strapi-chart/templates/deployment.yaml
@@ -8,6 +8,8 @@ spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
+  strategy:
+    type: {{ .Values.strategy | default "RollingUpdate" }}
   selector:
     matchLabels:
       {{- include "strapi-chart.selectorLabels" . | nindent 6 }}
