--- a/part2/strapi-k8s/helm/app.yaml
+++ b/part2/strapi-k8s/helm/app.yaml
@@ -2,7 +2,7 @@ replicaCount: 3
 
 image:
   repository: app-registry:5050/mystrapiapp-prod
-  tag: 0.0.1
+  tag: 0.0.2
 
 service:
   type: NodePort
@@ -72,3 +72,20 @@ resources:
   limits:
     cpu: 2000m
     memory: 4Gi
+
+securityContext:
+  runAsNonRoot: true
+  runAsUser: 2001
+  readOnlyRootFilesystem: true
+  allowPrivilegeEscalation: false
+  seccompProfile:
+    type: RuntimeDefault
+  capabilities:
+    drop:
+      - ALL
+
+volumes:
+  yarn-cache:
+    mount: /tmp
+    definition:
+      emptyDir: {}
