--- a/part2/strapi-k8s/helm/app.yaml
+++ b/part2/strapi-k8s/helm/app.yaml
@@ -67,10 +67,10 @@ affinity:
 
 resources:
   requests:
-    cpu: 100m
+    cpu: 300m
     memory: 2Gi
   limits:
-    cpu: 2000m
+    cpu: 1000m
     memory: 4Gi
 
 securityContext:
@@ -89,3 +89,9 @@ volumes:
     mount: /tmp
     definition:
       emptyDir: {}
+
+autoscaling:
+  enabled: true
+  minReplicas: 3
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
