--- a/part2/strapi-k8s/helm/strapi-chart/templates/hpa.yaml
+++ b/part2/strapi-k8s/helm/strapi-chart/templates/hpa.yaml
@@ -16,6 +16,7 @@ spec:
     {{- if .Values.autoscaling.targetCPUUtilizationPercentage }}
     - type: Resource
       resource:
+        name: cpu
         target:
           type: Utilization
           averageUtilization: {{ .Values.autoscaling.targetCPUUtilizationPercentage }}
